--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,11 @@
-<div class="center hero-unit"><center>
-		<h1><font size = "7">Welcome!</font></h1>
+<div class="center hero-unit">
+	<h1><font size = "10", color="black">Rikki Katz</font></h1>
 
-		<h2><p><font size = "5">Information about me: </font></p></h2>
-		<br>
-		<p><%= link_to "LinkedIn", "https://www.linkedin.com/pub/rikki-katz/74/2a7/110" %></p>	
-		<p><%= link_to "Facebook", "https://www.facebook.com/rikki.katz" %></p>
-</center></div>
+	<font size = "3", color="black">
+	I'm a computer science and mathematics student with programming experience in Java, C++, and Ruby on Rails!</font><br><br>
+
+	<p><font size = "5", color="black">More information about me: </font></p>
+
+	<p><a href="https://www.facebook.com/rikki.katz" class="btn btn-primary btn-lg active" role="button">Facebook</a></p>
+	<p><a href="https://www.linkedin.com/pub/rikki-katz/74/2a7/110" class="btn btn-primary btn-lg active" role = "button">LinkedIn</a></p>	
+</div>
