Made bg and buttons purple

--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -1,11 +1,11 @@
 $navbarBackgroundHighlight: white;
 $navbarBackground: white;
-$btnPrimaryBackground: green;
+$btnPrimaryBackground: purple;
 
 @import 'bootstrap';
 body{
     padding-top: 60px;
-    background: url(bg.jpg);
+    background: purple;
     background-size: 100%;
     background-repeat:no-repeat;
 }
