--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -1,11 +1,11 @@
 $navbarBackgroundHighlight: white;
 $navbarBackground: white;
-$btnPrimaryBackground: purple;
+$btnPrimaryBackground: #7f8c8d;
 
 @import 'bootstrap';
 body{
     padding-top: 60px;
-    background: purple;
+    background: #7f8c8d;
     background-size: 100%;
     background-repeat:no-repeat;
 }
