--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
 	<h1><font size = "10", color="black">Rikki Katz</font></h1>
 
 	<font size = "3", color="black">
-	I'm a computer science and mathematics student with programming experience in Java, C++, and Ruby on Rails!</font><br><br>
+	I'm a computer science and mathematics student with programming experience in Java, C++, and Ruby on Rails.</font><br><br>
 
 	<p><font size = "5", color="black">More information about me: </font></p>
 
