Changed social media links to icons

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,8 +4,7 @@
 	<font size = "3", color="black">
 	I'm a computer science and mathematics student with programming experience in Java, C++, and Ruby on Rails.</font><br><br>
 
-	<p><font size = "5", color="black">More information about me: </font></p>
-
-	<p><a href="https://www.facebook.com/rikki.katz" class="btn btn-primary btn-lg active" role="button">Facebook</a></p>
-	<p><a href="https://www.linkedin.com/pub/rikki-katz/74/2a7/110" class="btn btn-primary btn-lg active" role = "button">LinkedIn</a></p>	
+	<p><%= link_to(image_tag("fb.png", :alt => "Promo Image"), "https://www.facebook.com/rikki.katz") %>
+		<%= link_to(image_tag("li.gif", :alt => "Promo Image", :style => "width: 31px"), "https://www.linkedin.com/pub/rikki-katz/74/2a7/110") %>
+	</p>
 </div>
