--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,6 +5,6 @@
 	I'm a computer science and mathematics student with programming experience in Java, C++, and Ruby on Rails.</font><br><br>
 
 	<p><%= link_to(image_tag("fb.png", :alt => "Promo Image"), "https://www.facebook.com/rikki.katz") %>
-		<%= link_to(image_tag("li.gif", :alt => "Promo Image", :style => "width: 31px"), "https://www.linkedin.com/pub/rikki-katz/74/2a7/110") %>
+		<%= link_to(image_tag("li.gif", :alt => "Promo Image", :style => "width: 31px"), "https://www.linkedin.com/in/rikkikatz") %>
 	</p>
 </div>
