--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<%= favicon_link_tag "favicon.ico" %>
+
 	  <title>Rikki Katz</title>
 	  <%= stylesheet_link_tag    "application", media: "all" %>
 	  <%= javascript_include_tag "application" %>
 	  <%= csrf_meta_tags %>
+	  
 	</head>
 
 	<body>
