--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,6 +6,6 @@
 
 	<p><%= link_to(image_tag("fb.png", :alt => "Promo Image"), "https://www.facebook.com/rikki.katz") %>
 		<%= link_to(image_tag("li.gif", :alt => "Promo Image", :style => "width: 31px"), "https://www.linkedin.com/in/rikkikatz") %>
-		<%= link_to(image_tag("tw.png", :alt => "Promo Image", :style => "width: 31px"), "https://twitter.com/rikki_katz") %>
+		<%= link_to(image_tag("twitter.jpg", :alt => "Promo Image", :style => "width: 31px"), "https://twitter.com/rikki_katz") %>
 	</p>
 </div>
