--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<%= favicon_link_tag "favicon.ico" %>
+
+		<link rel="shortcut icon" href="/favicon_comp.ico" type="image/x-icon">
+		<link rel="icon" href="/favicon_comp.ico" type="image/x-icon">
 
 	  <title>Rikki Katz</title>
 	  <%= stylesheet_link_tag    "application", media: "all" %>
