added github link

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,13 @@
-<div class="jumbotron center">
+<div class="jumbotron">
 	
 	<h1><font size = "10", color="black">Rikki Katz</font></h1>
 
 	<font size = "3", color="black">
-	I'm a computer science and mathematics student with programming experience in Java, C++, and Ruby on Rails.</font><br><br>
+	<p>I'm a student at Queens College, City University of New York, studying Computer Science and Mathematics.</p>
+	<p>I have programming experience in Java, C++, and Ruby on Rails.</p></font>
 
-	<p><%= link_to(image_tag("fb.png", :alt => "Promo Image"), "https://www.facebook.com/rikki.katz") %>
+	<p><%= link_to(image_tag("git.png", :alt => "Promo Image", :style => "width: 45px"), "https://github.com/RikkiKatz") %>
+		<%= link_to(image_tag("fb.png", :alt => "Promo Image"), "https://www.facebook.com/rikki.katz") %>
 		<%= link_to(image_tag("li.gif", :alt => "Promo Image", :style => "width: 30px"), "https://www.linkedin.com/in/rikkikatz") %>
 		<%= link_to(image_tag("tw.png", :alt => "Promo Image", :style => "width: 31px"), "https://twitter.com/rikki_katz") %>
 	</p>
