--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,7 +1,7 @@
 <div class="panel panel-default">
 	<div class= "panel-heading">
-		<h1>About My Projects</h1>
-
-
+      <div class="panel-tile">
+			<h1>About My Projects</h1>
+		</div>
 	</div>
 </div>
