--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -6,6 +6,10 @@
 	</div>
 
 	<div class = "panel-body">
-
+		<ul class="nav nav-pills nav-stacked">
+			<li role="presentation" class="active"><a href="pages#project1">HFC Meetings</a></li>
+			<li role="presentation"><a href="#">Project 2</a></li>
+			<li role="presentation"><a href="#">Project 3</a></li>
+		</ul>
 	</div>
 </div>
