--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -7,8 +7,8 @@
 
 	<div class = "panel-body">
 		<ul class="nav nav-pills nav-stacked">
-			<li role="presentation" class="active"><a href="pages#project1">HFC Meetings</a></li>
-			<li role="presentation"><a href="#">Project 2</a></li>
+			<li role="presentation"><a href="pages#project1">HFC Meetings</a></li>
+			<li role="presentation"><a href="#">CUNY Research</a></li>
 			<li role="presentation"><a href="#">Project 3</a></li>
 		</ul>
 	</div>
