--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,15 +1,34 @@
 <div class = "panel panel-default">
 	<div class = "panel-heading">
-      <div class ="panel-tile">
-			<h1>About My Projects</h1>
-		</div>
+		<h1>About My Projects</h1>
 	</div>
 
 	<div class = "panel-body">
 		<ul class="nav nav-pills nav-stacked">
-			<li role="presentation"><a href="pages#project1">HFC Meetings</a></li>
+			<li role="presentation"><a href="#">HFC Meetings</a></li>
 			<li role="presentation"><a href="#">CUNY Research</a></li>
-			<li role="presentation"><a href="#">Project 3</a></li>
 		</ul>
 	</div>
+
+<% if false %>
+	<div class = "panel-heading">
+		<h1>About My Travels</h1>
+	</div>
+
+	<div class = "panel-body">
+		<ul class="nav nav-pills nav-stacked">
+			<li role="presentation"><a href="#">London</a></li>
+			<li role="presentation"><a href="#">Paris</a></li>
+			<li role="presentation"><a href="#">Amsterdam</a></li>
+			<li role="presentation"><a href="#">Brussels</a></li>
+			<li role="presentation"><a href="#">Italy</a></li>
+			<li role="presentation"><a href="#">Greece</a></li>
+			<li role="presentation"><a href="#">Israel</a></li>
+			<li role="presentation"><a href="#">Ireland</a></li>
+			<li role="presentation"><a href="#">Madrid</a></li>
+			<li role="presentation"><a href="#">Puerto Rico</a></li>
+		</ul>
+	</div>
+<% end %>
+
 </div>
