--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,12 +3,14 @@
 	<h1><font size = "10", color="black">Rikki Katz</font></h1>
 
 	<font size = "3", color="black">
-	<p>I'm a student at Queens College, City University of New York, studying Computer Science and Mathematics.</p>
-	<p>I have programming experience in Java, C++, and Ruby on Rails.</p></font>
+		<h3>I am a computer scientist, programmer, lover of mathematics, and avid traveller!</h3>
+		<h3>I have programming experience in Java, C++, HTML, CSS, JavaScript, SQL, and Ruby on Rails.</h3>
 
-	<p><%= link_to(image_tag("git.png", :alt => "Promo Image", :style => "width: 45px"), "https://github.com/RikkiKatz") %>
-		<%= link_to(image_tag("fb.png", :alt => "Promo Image"), "https://www.facebook.com/rikki.katz") %>
-		<%= link_to(image_tag("li.gif", :alt => "Promo Image", :style => "width: 30px"), "https://www.linkedin.com/in/rikkikatz") %>
-		<%= link_to(image_tag("tw.png", :alt => "Promo Image", :style => "width: 31px"), "https://twitter.com/rikki_katz") %>
-	</p>
+		<p>Contact me!</p>
+		<p><%= link_to(image_tag("git.png", :alt => "Promo Image", :style => "width: 45px"), "https://github.com/RikkiKatz") %>
+			<%= link_to(image_tag("fb.png", :alt => "Promo Image"), "https://www.facebook.com/rikki.katz") %>
+			<%= link_to(image_tag("li.gif", :alt => "Promo Image", :style => "width: 30px"), "https://www.linkedin.com/in/rikkikatz") %>
+			<%= link_to(image_tag("tw.png", :alt => "Promo Image", :style => "width: 31px"), "https://twitter.com/rikki_katz") %>
+		</p>
+	</font>
 </div>
