--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,10 +3,11 @@
 	<h1><font size = "10", color="black">Rikki Katz</font></h1>
 
 	<font size = "3", color="black">
-		<h3>I am a computer scientist, programmer, lover of mathematics, and avid traveller!</h3>
+		<h3>I study computer science and mathematics, intern at a software developement firm in Brooklyn, and love to travel!</h3>
 		<h3>I have programming experience in Java, C++, HTML, CSS, JavaScript, SQL, and Ruby on Rails.</h3>
 
-		<p>Contact me!</p>
+		<p>
+		<h3>Contact me!</h3>
 		<p><%= link_to(image_tag("git.png", :alt => "Promo Image", :style => "width: 45px"), "https://github.com/RikkiKatz") %>
 			<%= link_to(image_tag("fb.png", :alt => "Promo Image"), "https://www.facebook.com/rikki.katz") %>
 			<%= link_to(image_tag("li.gif", :alt => "Promo Image", :style => "width: 30px"), "https://www.linkedin.com/in/rikkikatz") %>
