--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,7 @@
 	<h1><font size = "10", color="black">Rikki Katz</font></h1>
 
 	<font size = "3", color="black">
-		<h3>I study computer science and mathematics, intern at a software developement firm in Brooklyn, and love to travel!</h3>
+		<h3>I study computer science and mathematics, and intern at a software developement firm in Brooklyn.</h3>
 		<h3>I have programming experience in Java, C++, HTML, CSS, JavaScript, SQL, and Ruby on Rails.</h3>
 
 		<p>
