--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,6 +5,7 @@
 	<font size = "3", color="black">
 		<h3>I study computer science and mathematics, and intern at a software developement firm in Brooklyn.</h3>
 		<h3>I have programming experience in Java, C++, HTML, CSS, JavaScript, SQL, and Ruby on Rails.</h3>
+		<h4>Sruly is annoying.</h3>
 
 		<p>
 		<h3>Contact me!</h3>
