--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,9 +3,8 @@
 	<h1><font size = "10", color="black">Rikki Katz</font></h1>
 
 	<font size = "3", color="black">
-		<h3>I study computer science and mathematics, and intern at a software developement firm in Brooklyn.</h3>
-		<h3>I have programming experience in Java, C++, HTML, CSS, JavaScript, SQL, and Ruby on Rails.</h3>
-		<h4>Sruly is annoying.</h3>
+		<h3>I am studying computer science and mathematics at Queens College, CUNY and interning at a software developement firm.</h3>
+		<h3>I have programming experience in Java, C++, HTML, HAML, CSS, JavaScript, JQuery, SQL, and Ruby on Rails.</h3>
 
 		<p>
 		<h3>Contact me!</h3>
